K8S_Deployments/k8s_VOL_HostPath_PVC_POD.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-pd
spec:
  containers:
  - image: nginx
    name: test-container
    volumeMounts:
    - mountPath: "/mnt/storage"
      name: pv-volume
  volumes:
  - name: pv-volume
    persistentVolumeClaim:
      claimName: ht-pvc
