K8S_Deployments/k8s_VOL_StorageClass_PVC_POD(Dynamic).yml
apiVersion: v1
kind: Pod
metadata:
  name: aws-pd
spec:
  containers:
  - image: nginx
    name: test-container
    volumeMounts:
    - mountPath: "/mnt/storage"
      name: aws-pv-volume
  volumes:
  - name: aws-pv-volume
    persistentVolumeClaim:
      claimName: aws-pvc
