K8S_Deployments/pod_02.yml
apiVersion: v1
kind: Pod
metadata:
  name: hitech-nginx
  namespace: prod
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
